--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   get: ^4.6.1
   # DateTime
   jiffy: ^5.0.0
-  intl: ^0.17.0
+  # intl: ^0.17.0
   http: ^0.13.4
   # Images
   cached_network_image: ^3.2.0 
@@ -77,6 +77,7 @@ dependencies:
   device_preview: ^0.7.5
   responsive_builder: ^0.4.2
   image_pickers: ^2.0.0+2
+  flutter_otp_text_field: ^1.1.1
 
 dev_dependencies:
   flutter_test:
